# simdcsv

./: .gitignore  CMakeLists.txt  README.md  mk
src/: common_defs.h  csv_defs.h  getopt.h  io_util.cpp  io_util.h  main.cpp  mem_util.h  portability.h  timing.h
